--- a/web_site/main/templates/main/choice_game.html
+++ b/web_site/main/templates/main/choice_game.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choice game</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'main/main.html' %}
+{% load static %}
+{% block content %}
+<link rel="stylesheet" href="{% static 'main/css/css_chgm.css' %}">
+<div class="background">
+    <div class="byk">
+        <div class="dyel">
+            <h1>Дуэль</h1>
+            <p>Пригласите друзей и вступайте в захватывающие соревнования . Проверьте, кто из вас лучше знает Татарстан и готов ли культурное путешествие вместе!   </p>
+        </div>
+        <div class="dyel">
+            <h1>Дуэль</h1>
+            <p>Пригласите друзей и вступайте в захватывающие соревнования . Проверьте, кто из вас лучше знает Татарстан и готов ли культурное путешествие вместе!   </p>
+        </div>
+    </div>
+</div>
+{% endblock %}
 
-<style>
-
-</style>
