--- a/web_site/main/templates/main/main.html
+++ b/web_site/main/templates/main/main.html
@@ -7,18 +7,8 @@
     <title>Title</title>
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-            <img src="logo.png" alt="Логотип">
-        </div>
-        <div class="links">
-            <ul>
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </div>
-    </header>
+    {% block content %}
+
+    {% endblock %}
 </body>
 </html>
