--- a/web_site/main/templates/main/choice_game.html
+++ b/web_site/main/templates/main/choice_game.html
@@ -1,4 +1,4 @@
-{% extends 'main/main.html' %}
+{% extends 'main/base.html' %}
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'main/css/css_chgm.css' %}">
