--- a/web_site/main/templates/Register/register.html
+++ b/web_site/main/templates/Register/register.html
@@ -1,10 +1,99 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'main/base.html' %}
+{% load static %}
+{% block content %}
+<link rel="stylesheet" href="{% static 'register/css/register.css' %}">
+<div class="wrapper">
+    <form method="post">
+        {% csrf_token %}
+        <h1>Сәлам минем дустым</h1>
+        <div class="input-box">
+            <!--<input type="text" placeholder="Email" required>-->
+            {{ form.username }}
+            <i class='bx bxs-user'></i>
+        </div>
+        <div class="input-box">
+            <!-- <input type="password"placeholder="Password" required>-->
+            {{ form.email }}
+            <i class='bx bxs-lock-alt' ></i>
+        </div>
+        <div class="input-box">
+            {{ form.password1 }}
+            <i class='bx bxs-lock-alt' ></i>
+        </div>
+        <div class="input-box">
+            {{ form.password2 }}
+            <i class='bx bxs-lock-alt' ></i>
+        </div>
+            <div style="color: red;">
+                {{ form.errors }}
+            </div>
+        
+            <button type="submit" class="btn">Зарегестрироваться</button>
+            <div class="auth-link">
+                <p>Есть аккаунт? <a href="{% url 'login' %}">Авторизироваться</a></p>
+            </div>
+        </div>
+    </form>
+    <button onclick="togglePasswordVisibility()" class="eye-button" >Открыть пароль
+    </button>
+</div>
+<script>
+    window.onload = function() {
+    var passwordInput = document.getElementById("passwordInput");
+    var eyeOpenIcon = document.getElementById("eyeOpenIcon");
+    var eyeClosedIcon = document.getElementById("eyeClosedIcon");
 
-</body>
-</html>
+    // По умолчанию скрываем пароль
+    passwordInput.type = "password";
+    eyeOpenIcon.style.display = "inline-block";
+    eyeClosedIcon.style.display = "none";
+
+   
+}
+
+function togglePasswordVisibility() {
+    var passwordInput = document.getElementById("passwordInput");
+    var eyeOpenIcon = document.getElementById("eyeOpenIcon");
+    var eyeClosedIcon = document.getElementById("eyeClosedIcon");
+
+    if (passwordInput.type === "password") {
+        passwordInput.type = "text";
+        eyeOpenIcon.style.display = "none";
+        eyeClosedIcon.style.display = "inline-block";
+
+        // Сохраняем состояние видимости пароля в localStorage
+        localStorage.setItem("passwordVisibility", "visible");
+    } else {
+        passwordInput.type = "password";
+        eyeOpenIcon.style.display = "inline-block";
+        eyeClosedIcon.style.display = "none";
+
+        // Сохраняем состояние видимости пароля в localStorage
+        localStorage.setItem("passwordVisibility", "hidden");
+    }
+}
+
+function togglePasswordVisibility2() {
+    var passwordInput = document.getElementById("passwordInput2");
+    var eyeOpenIcon = document.getElementById("eyeOpenIcon2");
+    var eyeClosedIcon = document.getElementById("eyeClosedIcon2");
+
+    if (passwordInput.type === "password") {
+        passwordInput.type = "text";
+        eyeOpenIcon.style.display = "none";
+        eyeClosedIcon.style.display = "inline-block";
+
+        // Сохраняем состояние видимости пароля в localStorage
+        localStorage.setItem("passwordVisibility", "visible");
+    } else {
+        passwordInput.type = "password";
+        eyeOpenIcon.style.display = "inline-block";
+        eyeClosedIcon.style.display = "none";
+
+        // Сохраняем состояние видимости пароля в localStorage
+        localStorage.setItem("passwordVisibility", "hidden");
+    }
+}
+
+</script>
+{% endblock %}
