--- a/web_site/main/templates/game/sit1.html
+++ b/web_site/main/templates/game/sit1.html
@@ -74,13 +74,17 @@
     </style>
    
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=1484c357-d4f3-437e-8fe6-963acf9ed263"></script>
-    <script src="script.js"></script>
     <script src="mapbasics.js" type="text/html"></script>
     <script src="{% static 'game/js/ws.js' %}"></script>
     <script src="{% static 'game/js/panorama.js' %}"></script>
 </head>
 <body>
-    <div id="timer"></div>
+    <div class="timer">
+        <p>
+            12:00
+        </p>
+        <div class="time_line"></div>
+    </div>
     <div id="map" class="map"></div>
     <div id="player1" class="player"></div>
     
@@ -89,11 +93,33 @@
 </html>
 
 <style>
-    #timer{
+    .time_line{
+        position: absolute;
+        margin-top: -28%;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        width: 100px;
+        height: 10px;
+        background-color: red;
+    }
+    .timer{
         position: absolute;
         z-index: 5;
-        color: red;
-        font-size: 30px;
+        font-size: 25px;
+        width: 100px;
+        height: 50px;
+        /*padding: 0px 50px;*/
+        background-color: rgb(104, 49, 255);
+        margin-left: 47%;
+        margin-top: 1%;
+        border-radius: 10px;
+        border: solid red 10%;
+    }
+    
+    .timer p{
+        margin-top: 10%;
+        margin-left: 20%;
+
     }
     #startButton{
         position: absolute;
